--- a/primerpeso/templates/primerpeso/home.jade
+++ b/primerpeso/templates/primerpeso/home.jade
@@ -19,10 +19,9 @@ html
       include primerpeso/partials/navigation
       section.header
         img(src="{% static 'primerpeso/img/logo_pp.png' %}")
-        h1.header-title <strong>PrimerPeso</strong> te ayuda a crear o expandir tu negocio.
-            h2.header-subtitle Navegando los más de $300 millones de dólares disponibles en programas de Gobierno para pequeños empresarios en Puerto Rico.
-            h2.header-subtitle Estamos en BETA y apreciamos tus comentarios. Lanzaremos oficialmente en Nov 2014.
-        a.btn(href='/preguntas') Participar del sitio beta
+        h1.header-title ¿Qué es<strong>PrimerPeso</strong>?
+            h2.header-subtitle  Primer Peso es el lugar donde podrás encontrar los incentivos que ofrece el gobierno de Puerto Rico para establecer, expandir o fortalecer tu propio negocio según tus necesidades.
+        a.btn(href='/preguntas') Entrar
 
       section.how-it-works.col-lg-12
           h1.section-title ¿Cómo funciona PrimerPeso?
@@ -30,7 +29,7 @@ html
             .col-lg-4
               img(src="{% static 'primerpeso/img/answer.png' %}")
               h3 1. Responde
-              p 10 preguntas simples sobre ti y tu negocio.
+              p 10 preguntas simples sobre lo que buscas.
             .col-lg-4
               img(src="{% static 'primerpeso/img/filter.png' %}")
               h3 2. Filtra
@@ -38,7 +37,7 @@ html
             .col-lg-4
               img(src="{% static 'primerpeso/img/apply.png' %}")
               h3 3. Selecciona
-              p Revisa tus opciones y selecciona los programas de tu interés.
+              p Revisa las opciones y selecciona los programas expandir mi negocio.
       section.how-can-we-help.col-lg-12
         h1.section-title ¿Cómo te podemos ayudar?
         .options
@@ -47,8 +46,8 @@ html
           a.btn.help-you(href='/preguntas') Quiero abrir un nuevo local
           a.btn.help-you(href='/preguntas') Quiero exportar mis productos
       section.what-you-get.col-lg-12
-          h1.section-title ¿Qué tipo de programas deseas recibir?
-          h4 Contamos con más de 80 programas pertenecientes a agencias como CCE, PRIDCO, OAJ, ADL, BDE y muchas otras.
+          h1.section-title ¿En qué tipo de programas deseas?
+          h4 Contamos con una variedad de programas de incentivos pertenecientes a agencias como: el Departamento de Desarrollo Económico, la Compañía de Comercio y Exportación, Fomento Industrial, Compañía de Turismo, Banco de Desarrollo Económico, Departamento del Trabajo entre otros..
           .col-lg-12
             img.col-lg-4.col-md-6.col-sm-12(src="{% static 'primerpeso/img/reembolsos.png' %}")
             img.col-lg-4.col-md-6.col-sm-12(src="{% static 'primerpeso/img/creditos.png' %}")
@@ -59,26 +58,25 @@ html
             img.col-lg-4.col-md-6.col-sm-12(src="{% static 'primerpeso/img/talleres.png' %}")
 
       section.who-have-we-helped.col-lg-12
-          h1.section-title ¿A quién hemos ayudado?
+          h1.section-title ¿A quién hemos ayudado con los incentivos?
           .testimonials.left
             img(src="{% static 'primerpeso/img/lettuce.png' %}")
             p "Ojalá esta aplicación hubiese existido tres años atrás cuando estaba en plena búsqueda de financiamiento"
             a.btn.last-butt(href='/preguntas') ¡Empieza ahora!
 
           #footer
-              div © 2014 CoquiCoders.
+              div Copyright © 2016 Compañía de Comercio y Exportación. Todos los derechos reservados. Política de Privacidad
               div
                 strong PrimerPeso
                 |  Proyecto
-                |  creado por
-                a(href='http://coquicoders.org')  Coqui Coders
+                |  creado  bajo la colaboración de Code for America y el Estado Libre Asociado de Puerto Rico
               div
                 | Licencia bajo&nbsp;
                 a(href='http://opensource.org/licenses/mit-license.html') MIT
               div
-                a(href='https://github.com/codeforamerica/primerpeso') GitHub Project
+                a(href='https://github.com/codeforamerica/primerpeso2') GitHub Project
                 |  ·&nbsp;
-                a(href='https://github.com/codeforamerica/primerpeso/issues') Issues
+                a(href='https://github.com/codeforamerica/primerpeso2/issues') Issues
               div.pr-logo
                 a(href='http://pr.gov')
                   img(src="{% static 'primerpeso/img/prgov.png' %}")
