Updated footer file

--- a/primerpeso/templates/primerpeso/partials/footer.jade
+++ b/primerpeso/templates/primerpeso/partials/footer.jade
@@ -1,20 +1,19 @@
 #footer
+  -load staticfiles
   .container.text-center
-    div © 2014 CoquiCoders.
+    div Copyright © 2016 Compañía de Comercio y Exportación. Todos los derechos reservados. Política de Privacidad
     div
       strong PrimerPeso
       |  Proyecto
-      |  Creado por
-      a(href='http://coquicoders.org')  Coqui Coders
+      |  creado  bajo la colaboración de Code for America y el Estado Libre Asociado de Puerto Rico
     div
-      | Code licensed bajo&nbsp;
-      a(href='http://opensource.org/licenses/mit-license.html') Licencia de MIT
+      | Licencia bajo&nbsp;
+      a(href='http://opensource.org/licenses/mit-license.html') MIT
     div
       a(href='https://github.com/codeforamerica/primerpeso2') GitHub Project
       |  ·&nbsp;
       a(href='https://github.com/codeforamerica/primerpeso2/issues') Issues
     div.pr-logo
-      -load staticfiles
       a(href='http://pr.gov')
         img(src="{% static 'primerpeso/img/prgov.png' %}")
       a(href='http://codeforamerica.org')
