Setup email and fixed as many translations as i could.

--- a/primerpeso/templates/primerpeso/opportunity_detail.html
+++ b/primerpeso/templates/primerpeso/opportunity_detail.html
@@ -35,6 +35,12 @@
                     </div>
                   </li>
                   <li>
+                    <h4>Nombre De Agencia</h4>
+                    <div class="panel-section-inner">
+                      {{ object.agency.email }}
+                    </div>
+                  </li>
+                  <li>
                     <h4>Vencimiento</h4>
                     <div class="panel-section-inner">
                       {{ object.application_deadline }}
